Add OTC key/value tag handling

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ setenv =
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
     #OPENSTACKSDK_TESTS_SUBDIR=*
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
-commands = oslo_debug_helper -t opentelekom/tests functional.nat.v2.test_nat -s {posargs}
+commands = oslo_debug_helper -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
 
 [testenv:ansible]
 # Need to pass some env vars for the Ansible playbooks
