--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = opentelekomsdk
-version = 0.8.0 # do pre-versioning befor first release
+version = 0.8.1
 summary = Extension of the OpenStack SDK with serices for Open Telekom Cloud
 description-file =
     README.md
