--- a/tox.ini
+++ b/tox.ini
@@ -22,15 +22,36 @@ deps = -r{toxinidir}/test-requirements.txt
 commands = stestr run {posargs}
            stestr slowest
 
+[testenv:unit_debug]
+setenv =
+    {[testenv]setenv}
+    OTC_TEST_SUITE=otc-sdkunit
+    OS_CLOUD=bmwpaas
+    OS_TEST_TIMEOUT=6000
+    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
+    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
+    PBR_VERSION=0.8.0
+    OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
+    OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:false}
+    OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:false}
+    OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
+    #OPENSTACKSDK_TESTS_SUBDIR=*
+    #OPENSTACKSDK_TESTS_SUBDIR="dms"
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.test_proxy -s {posargs}
+
+
 [testenv:functional]
 # Some jobs (especially heat) takes longer, therefore increase default timeout
 # This timeout should not be smaller, than the longest individual timeout
 setenv =
     {[testenv]setenv}
-    OS_CLOUD=profi
+    OTC_TEST_SUITE=otc-sdktest
+    OS_CLOUD=bmwpaas
     OS_TEST_TIMEOUT=600
-    OPENSTACKSDK_DEMO_CLOUD=profi
-    OPENSTACKSDK_OPERATOR_CLOUD=profi
+    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
+    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
     PBR_VERSION=0.8.0    # only use as long as no git versioning is available
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
     OPENSTACKSDK_TESTS_SUBDIR="nat"
@@ -40,10 +61,13 @@ commands = stestr --test-path ./opentelekom/tests/functional/{env:OPENSTACKSDK_T
 [testenv:functional_debug]
 setenv =
     {[testenv]setenv}
-    OS_CLOUD=profi
+    OTC_TEST_SUITE=rbe-sdktest
+    OTC_TEST_KEY=rbe-sdktest
+    OTC_TEST_SSH_KEY=brederle-master
+    OS_CLOUD=bmwpaas
     OS_TEST_TIMEOUT=6000
-    OPENSTACKSDK_DEMO_CLOUD=profi
-    OPENSTACKSDK_OPERATOR_CLOUD=profi
+    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
+    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
     PBR_VERSION=0.8.0
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
     OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:false}
@@ -51,7 +75,9 @@ setenv =
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
     #OPENSTACKSDK_TESTS_SUBDIR=*
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
-commands = oslo_debug_helper -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.cce.v3.test_cce -s {posargs}
 
 [testenv:ansible]
 # Need to pass some env vars for the Ansible playbooks
