--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ setenv =
     OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
     PBR_VERSION=0.8.0    # only use as long as no git versioning is available
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
-    OPENSTACKSDK_TESTS_SUBDIR="nat"
+    OPENSTACKSDK_TESTS_SUBDIR=*
 commands = stestr --test-path ./opentelekom/tests/functional/{env:OPENSTACKSDK_TESTS_SUBDIR:} run --serial {posargs}
            stestr slowest
 
@@ -76,7 +76,8 @@ setenv =
     #OPENSTACKSDK_TESTS_SUBDIR=*
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.css.v1.test_cluster -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.cce.v3.test_cce -s {posargs}
 
 [testenv:ansible]
