--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 minversion = 3.1
-envlist = pep8,py37,py36,py35,py27
+#envlist = pep8,py37,py36,py35,py27
+envlist = py36
 skipsdist = true
 ignore_basepython_conflict = true
 
@@ -14,12 +15,19 @@ setenv =
     LANG=en_US.UTF-8
     LANGUAGE=en_US:en
     LC_ALL=C
+    OTC_TEST_SUITE=otc-sdkunit
+    OS_CLOUD=bmwpaas
+    OS_TEST_TIMEOUT=6000
+    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
+    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
+    PBR_VERSION=0.8.0
     OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:true}
     OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:true}
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:true}
+    #OPENSTACKSDK_TESTS_SUBDIR=cce
 deps = -r{toxinidir}/test-requirements.txt
        -r{toxinidir}/requirements.txt
-commands = stestr run {posargs}
+commands = stestr --test-path ./opentelekom/tests/unit/{env:OPENSTACKSDK_TESTS_SUBDIR:} run --serial {posargs}
            stestr slowest
 
 [testenv:unit_debug]
@@ -35,11 +43,12 @@ setenv =
     OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:false}
     OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:false}
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
-    #OPENSTACKSDK_TESTS_SUBDIR=*
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
-#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
-#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.test_proxy -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.vpc.v1.test_vpc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.test_proxy -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_cluster_node.TestClusterNode.test_wait_status_ids -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_cluster_node -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_filtering -s {posargs}
 
 
 [testenv:functional]
@@ -54,8 +63,8 @@ setenv =
     OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
     PBR_VERSION=0.8.0    # only use as long as no git versioning is available
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
-    OPENSTACKSDK_TESTS_SUBDIR=*
-commands = stestr --test-path ./opentelekom/tests/functional/{env:OPENSTACKSDK_TESTS_SUBDIR:} run --serial {posargs}
+    #OPENSTACKSDK_TESTS_SUBDIR=cce
+commands = stestr --test-path ./opentelekom/tests/functional/{env:OPENSTACKSDK_TESTS_SUBDIR:} run {posargs}
            stestr slowest
 
 [testenv:functional_debug]
@@ -75,9 +84,9 @@ setenv =
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
     #OPENSTACKSDK_TESTS_SUBDIR=*
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
-#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.css.v1.test_cluster -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.css.v1.test_cluster -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.cce.v3.test_cce -s {posargs}
 
 [testenv:ansible]
