Add foreign cloud configuration for vpc peering tests

--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,11 @@ setenv =
     LANGUAGE=en_US:en
     LC_ALL=C
     OTC_TEST_SUITE=otc-sdkunit
-    OS_CLOUD=bmwpaas
+    OS_CLOUD=paas
     OS_TEST_TIMEOUT=6000
-    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
-    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
+    OPENSTACKSDK_DEMO_CLOUD=paas
+    OPENSTACKSDK_OPERATOR_CLOUD=paas
+    OTC_FOREIGN_CLOUD=training
     PBR_VERSION=0.8.0
     OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:true}
     OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:true}
@@ -34,10 +35,11 @@ commands = stestr --test-path ./opentelekom/tests/unit/{env:OPENSTACKSDK_TESTS_S
 setenv =
     {[testenv]setenv}
     OTC_TEST_SUITE=otc-sdkunit
-    OS_CLOUD=bmwpaas
+    OS_CLOUD=paas
     OS_TEST_TIMEOUT=6000
-    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
-    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
+    OPENSTACKSDK_DEMO_CLOUD=paas
+    OPENSTACKSDK_OPERATOR_CLOUD=paas
+    OTC_FOREIGN_CLOUD=training
     PBR_VERSION=0.8.0
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
     OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:false}
@@ -57,10 +59,11 @@ commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_clus
 setenv =
     {[testenv]setenv}
     OTC_TEST_SUITE=otc-sdktest
-    OS_CLOUD=bmwpaas
+    OS_CLOUD=paas
     OS_TEST_TIMEOUT=600
-    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
-    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
+    OPENSTACKSDK_DEMO_CLOUD=paas
+    OPENSTACKSDK_OPERATOR_CLOUD=paas
+    OTC_FOREIGN_CLOUD=training
     PBR_VERSION=0.8.0    # only use as long as no git versioning is available
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
     #OPENSTACKSDK_TESTS_SUBDIR=cce
@@ -73,10 +76,11 @@ setenv =
     OTC_TEST_SUITE=rbe-sdktest
     OTC_TEST_KEY=rbe-sdktest
     OTC_TEST_SSH_KEY=brederle-master
-    OS_CLOUD=bmwpaas
+    OS_CLOUD=paas
     OS_TEST_TIMEOUT=6000
-    OPENSTACKSDK_DEMO_CLOUD=bmwpaas
-    OPENSTACKSDK_OPERATOR_CLOUD=bmwpaas
+    OPENSTACKSDK_DEMO_CLOUD=paas
+    OPENSTACKSDK_OPERATOR_CLOUD=paas
+    OTC_FOREIGN_CLOUD=training
     PBR_VERSION=0.8.0
     OPENSTACKSDK_FUNC_TEST_TIMEOUT_LOAD_BALANCER=600
     OS_LOG_CAPTURE={env:OS_LOG_CAPTURE:false}
@@ -84,10 +88,11 @@ setenv =
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
     #OPENSTACKSDK_TESTS_SUBDIR=*
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v1.test_vpc -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.css.v1.test_cluster -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.cce.v3.test_cce -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v2.test_peering -s {posargs}
 
 [testenv:ansible]
 # Need to pass some env vars for the Ansible playbooks
