--- a/tox.ini
+++ b/tox.ini
@@ -46,10 +46,10 @@ setenv =
     OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:false}
     OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:false}
     #OPENSTACKSDK_TESTS_SUBDIR="dms"
-#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.vpc.v1.test_vpc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.vpc.v1.test_nat -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.test_proxy -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_cluster_node.TestClusterNode.test_wait_status_ids -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_cluster_node -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.rds.v3.test_rds_enc -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_filtering -s {posargs}
 
 
@@ -92,7 +92,8 @@ setenv =
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.rds.v3.test_rds_enc -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.css.v1.test_cluster -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.cce.v3.test_cce -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v2.test_peering -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.* -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.csbs.v1.test_csbs -s {posargs}
 
 [testenv:ansible]
 # Need to pass some env vars for the Ansible playbooks
