Add OtcSubResource, fix remote peering

--- a/tox.ini
+++ b/tox.ini
@@ -49,8 +49,9 @@ setenv =
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.vpc.v1.test_nat -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.test_proxy -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_cluster_node.TestClusterNode.test_wait_status_ids -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.rds.v3.test_rds_enc -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.rds.v3.test_rds_enc -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.cce.v3.test_filtering -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests unit.csbs.v1.test_subresource -s {posargs}
 
 
 [testenv:functional]
@@ -93,7 +94,8 @@ setenv =
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.css.v1.test_cluster -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.cce.v3.test_cce -s {posargs}
 #commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.* -s {posargs}
-commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.csbs.v1.test_csbs -s {posargs}
+#commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.csbs.v1.test_csbs -s {posargs}
+commands = oslo_debug_helper -vvvvvvv -t opentelekom/tests functional.vpc.v2.test_peering -s {posargs}
 
 [testenv:ansible]
 # Need to pass some env vars for the Ansible playbooks
